# capsule-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml  RELEASE.yml  ci.yml  coverage.yml  release.yml
src/: cmd_create_application.rs  cmd_ps.rs  lib.rs  main.rs
src/api/: http.rs  mod.rs
