#Copyright 2022 the original author or authors.
#
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.
[package]
name = "capsule"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tempdir = "0.3.7"
wiremock = "0.5"
async-std = { version = "1.9.0", features = ["attributes"] }
mockall = "0.11.0"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
git2 = "0.14.2"
log = "0.4.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
isahc = { version = "1.7", features = ["json"] }